--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend-skripsi",
   "version": "1.0.0",
   "description": "backend skripsi aplikasi penyewaan lapangan futsal",
-  "main": "src/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node src/main.js",
+    "start": "node main.js",
     "test": "jest -i",
     "seed": "node prisma/seed.js"
   },
